--- a/views/concat.erb
+++ b/views/concat.erb
@@ -5,7 +5,6 @@
     <title></title>
   </head>
   <body>
-    <%= @number.times do puts @phrase %>
-
+    <%= @params1.values.join(" ") + "." %>
   </body>
 </html>
